Adds index markup fixes

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
         <img src="" width="" height="" alt="">
       </a>
       <a class="header__logo-letter logo-letter" href="">
-        <img src="" width="" height="" alt="">
+        <img src="" width="" height="" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
@@ -77,7 +77,7 @@
       <section class="invite-dealers">
         <h3 class="invite-dealers__heading">Приглашаем к сотрудничеству дилеров!</h3>
         <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img class="invite-dealers__map" src="" width="" height="" alt="">
+        <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса">
       </section>
     </main>
     <footer class="footer">
@@ -85,13 +85,13 @@
         <svg></svg>
       </a>
       <div class="footer__social-wrapper">
-        <a class="footer__social-link footer__social-link--vk" href="#" aria-label="Вконтакте">
+        <a class="footer__social-link footer__social-link--vk" href="#" aria-label="Вконтакте.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб">
+        <a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--telegram" href="#" aria-label="Телеграм">
+        <a class="footer__social-link footer__social-link--telegram" href="#" aria-label="Телеграм.">
           <svg></svg>
         </a>
       </div>
