Adds link, reducts site header and footer

--- a/source/form.html
+++ b/source/form.html
@@ -2,24 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Cat Energy</title>
+    <title>Cat Energy - form</title>
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="#">
-        <img src="" width="" height="" alt="">
-      </a>
-      <a class="header__logo-letter logo-letter" href="">
-        <img src="" width="" height="" alt="Логотип Cat Energy">
+      <a class="header__logo logo" href="index.html">
+        <svg></svg>
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
           <svg>
           </svg>
         </button>
-        <a class="main-nav__link site-link" href="#">Главная</a>
-        <a class="main-nav__link site-link" href="#">Каталог продукции</a>
-        <a class="main-nav__link main-nav__link--current site-link" href="#">Подбор программы</a>
+        <a class="main-nav__link site-link" href="index.html">Главная</a>
+        <a class="main-nav__link site-link" href="catalog.html">Каталог продукции</a>
+        <a class="main-nav__link main-nav__link--current site-link">Подбор программы</a>
       </nav>
     </header>
     <main class="main-container">
@@ -99,24 +96,21 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__logo-letter logo-letter">
+      <a class="footer__logo logo">
         <svg></svg>
       </a>
       <div class="footer__social-wrapper">
-        <a class="footer__social-link footer__social-link--vk" href="#" aria-label="Вконтакте.">
+        <a class="footer__social-link footer__social-link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб.">
+        <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Ютуб.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--telegram" href="#" aria-label="Телеграм.">
+        <a class="footer__social-link footer__social-link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
           <svg></svg>
         </a>
       </div>
-      <a class="footer__Academy-logo-letter" href="#">
-        <svg></svg>
-      </a>
-      <a class="footer__Academy-logo" href="#">
+      <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
         <svg></svg>
       </a>
     </footer>
