--- a/source/index.html
+++ b/source/index.html
@@ -6,39 +6,36 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="#">
-        <img src="" width="" height="" alt="">
-      </a>
-      <a class="header__logo-letter logo-letter" href="">
-        <img src="" width="" height="" alt="Логотип Cat Energy">
+      <a class="header__logo logo" href="index.html">
+        <svg></svg>
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
           <svg>
           </svg>
         </button>
-        <a class="main-nav__link main-nav__link--current site-link" href="#">Главная</a>
-        <a class="main-nav__link site-link" href="#">Каталог продукции</a>
-        <a class="main-nav__link site-link" href="#">Подбор программы</a>
+        <a class="main-nav__link main-nav__link--current site-link">Главная</a>
+        <a class="main-nav__link site-link" href="catalog.html">Каталог продукции</a>
+        <a class="main-nav__link site-link" href="form.html">Подбор программы</a>
       </nav>
     </header>
     <main class="main-container">
       <section class="hero">
         <h1 class="hero__heading heading">Функциональное питание для котов</h1>
         <p class="hero__subheading">Занялся собой? Займись котом!</p>
-        <a class="hero__button button" href="#">Подобрать программу</a>
+        <a class="hero__button button" href="form.html">Подобрать программу</a>
       </section>
       <section class="diet diet--slim">
         <h2 class="diet__heading heading">Похудение</h2>
         <p class="diet__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
         </p>
-        <a class="diet__link site-link" href="#">Каталог Slim</a>
+        <a class="diet__link site-link" href="catalog.html#slim">Каталог Slim</a>
       </section>
       <section class="diet diet--pro">
         <h2 class="diet__heading heading">Набор массы</h2>
         <p class="diet__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
         </p>
-        <a class="diet__link site-link" href="#">Каталог Pro</a>
+        <a class="diet__link site-link" href="catalog.html#pro">Каталог Pro</a>
       </section>
       <section class="advantages">
         <h2 class="advantages__heading">Как это работает</h2>
@@ -81,24 +78,21 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__logo-letter logo-letter">
+      <a class="footer__logo logo">
         <svg></svg>
       </a>
       <div class="footer__social-wrapper">
-        <a class="footer__social-link footer__social-link--vk" href="#" aria-label="Вконтакте.">
+        <a class="footer__social-link footer__social-link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб.">
+        <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Ютуб.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--telegram" href="#" aria-label="Телеграм.">
+        <a class="footer__social-link footer__social-link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
           <svg></svg>
         </a>
       </div>
-      <a class="footer__Academy-logo-letter" href="#">
-        <svg></svg>
-      </a>
-      <a class="footer__Academy-logo" href="#">
+      <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
         <svg></svg>
       </a>
     </footer>
