--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,20 +6,17 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="#">
-        <img src="" width="" height="" alt="">
-      </a>
-      <a class="header__logo-letter logo-letter" href="">
-        <img src="" width="" height="" alt="">
+      <a class="header__logo logo" href="index.html">
+        <svg></svg>
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
           <svg>
           </svg>
         </button>
-        <a class="main-nav__link site-link" href="#">Главная</a>
-        <a class="main-nav__link main-nav__link--current site-link" href="#">Каталог продукции</a>
-        <a class="main-nav__link site-link" href="#">Подбор программы</a>
+        <a class="main-nav__link site-link" href="index.html">Главная</a>
+        <a class="main-nav__link main-nav__link--current site-link">Каталог продукции</a>
+        <a class="main-nav__link site-link" href="form.html">Подбор программы</a>
       </nav>
     </header>
     <main class="main-container">
@@ -45,7 +42,7 @@
             <button class="product-card__button button" type="button">Заказать</button>
         </article>
         <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 1000г.">
+          <img class="product-card__image" id="pro" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 1000г.">
             <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
             <table class="product-card__description">
               <tr>
@@ -102,7 +99,7 @@
             <button class="product-card__button button" type="button">Заказать</button>
         </article>
         <article class="product-card">
-          <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 500г.">
+          <img class="product-card__image" id="slim" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 500г.">
             <h2 class="product-card__title">Cat Energy Slim 500г</h2>
             <table class="product-card__description">
               <tr>
@@ -219,24 +216,21 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__logo-letter logo-letter">
+      <a class="footer__logo logo">
         <svg></svg>
       </a>
       <div class="footer__social-wrapper">
-        <a class="footer__social-link footer__social-link--vk" href="#" aria-label="Вконтакте.">
+        <a class="footer__social-link footer__social-link--vk" href="https://vk.com/htmlacademy" aria-label="Вконтакте.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб.">
+        <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Ютуб.">
           <svg></svg>
         </a>
-        <a class="footer__social-link footer__social-link--telegram" href="#" aria-label="Телеграм.">
+        <a class="footer__social-link footer__social-link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
           <svg></svg>
         </a>
       </div>
-      <a class="footer__Academy-logo-letter" href="#">
-        <svg></svg>
-      </a>
-      <a class="footer__Academy-logo" href="#">
+      <a class="footer__Academy-logo" href="https://htmlacademy.ru/">
         <svg></svg>
       </a>
     </footer>
