Adds sections heading in catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -163,6 +163,7 @@
         </article>
       </section>
       <section class="additional-products">
+        <h2 class="additional-products__heading heading">Дополнительные товары</h2>
         <ul class="additional-products__list">
           <li class="additional-products__item">
             <h3 class="additional-products__title">Сахарозаменитель</h3>
@@ -206,7 +207,7 @@
           </li>
         </ul>
       </section>
-      <section class="promotion">
+      <section class="promotion" aria-label="Акция">
         <img src="" width="" height="" alt="Портфель-переноска для котов">
       </section>
       <section class="invite-dealers">
