Adds mentors fixes

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
       <svg></svg>
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle">
+      <button class="main-nav__toggle main-nav__toggle--hidden">
         Открыть меню
       </button>
       <a class="main-nav__link" href="index.html">Главная</a>
