Adds stylization for invite-dealers

--- a/source/index.html
+++ b/source/index.html
@@ -92,8 +92,8 @@
       <button class="main-nav__toggle">
         Открыть меню
       </button>
-      <a class="main-nav__link" href="index.html">Главная</a>
-      <a class="main-nav__link main-nav__link--current">Каталог продукции</a>
+      <a class="main-nav__link main-nav__link--current">Главная</a>
+      <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
       <a class="main-nav__link" href="form.html">Подбор программы</a>
     </nav>
   </header>
@@ -158,13 +158,18 @@
       </div>
     </section>
     <section class="invite-dealers">
-      <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
-      <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса">
+      <div class="invite-dealers__wrapper">
+        <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
+        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="invite-dealers__map-wrapper">
+        <img class="invite-dealers__map" src="img/map.jpg" width="320" height="362" alt="Карта местоположения офиса.">
+        <img class="invite-dealers__map-pin" src="img/map-pin.png" width="57" height="53" alt="Наш офис здесь.">
+      </div>
     </section>
   </main>
   <footer class="footer">
-    <a class="logo logo--letter">
+    <a class="logo logo--letter" href="index.html">
       <svg width="129" height="24" aria-hidden="true" focusable="false" viewBox="0 0 129 24" fill="currentColor"
         xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_88502_265)">
