Adds copy invite-dealers in catalog and form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -289,9 +289,14 @@
       <p class="promotion__description">Закажите все и получите чехол для кота в подарок!</p>
     </section>
     <section class="invite-dealers">
-      <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
-      <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <img class="invite-dealers__map" src="" width="" height="" alt="Карта местоположения офиса компании">
+      <div class="invite-dealers__wrapper">
+        <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
+        <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="invite-dealers__map-wrapper">
+        <img class="invite-dealers__map" src="img/map.jpg" width="320" height="362" alt="Карта местоположения офиса.">
+        <img class="invite-dealers__map-pin" src="img/map-pin.png" width="57" height="53" alt="Наш офис здесь.">
+      </div>
     </section>
   </main>
   <footer class="footer">
