--- a/source/index.html
+++ b/source/index.html
@@ -140,18 +140,20 @@
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
         в день.
       </p>
-      <dl class="example__list">
-        <dt class="example__weight">Снижение веса</dt>
-        <dd class="example__description">5 кг</dd>
-      </dl>
-      <dl class="example__list">
-        <dt class="example__time">Затрачено времени</dt>
-        <dd class="example__description">60 дней</dd>
-      </dl>
+      <div class="example__list-wrapper">
+        <dl class="example__list">
+          <dt class="example__weight">Снижение веса</dt>
+          <dd class="example__description">5 кг</dd>
+        </dl>
+        <dl class="example__list">
+          <dt class="example__time">Затрачено времени</dt>
+          <dd class="example__description">60 дней</dd>
+        </dl>
+      </div>
       <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
       <div class="example__slider">
-        <img class="example__image-before" src="" width="" height="" alt="Толстый кот.">
-        <img class="example__image-after" src="" width="" height="" alt="Стройный кот.">
+        <img class="example__image-before" src="img/fat-cat.png" width="280" height="256" alt="Толстый кот.">
+        <img class="example__image-after" src="img/slim-cat.png" width="280" height="256" alt="Стройный кот.">
         <button class="button" aria-label="Подвиньте вправо или влево.">
           <svg></svg>
         </button>
