--- a/source/index.html
+++ b/source/index.html
@@ -99,9 +99,13 @@
   </header>
   <main class="main-container">
     <section class="hero">
-      <h1 class="hero__title">Функциональное питание для котов</h1>
-      <h2 class="hero__subtitle">Занялся собой? Займись котом!</h2>
-      <a class="button" href="form.html">Подобрать программу</a>
+      <div class="hero__content-wrapper">
+        <h1 class="hero__title">Функциональное питание для котов</h1>
+        <h2 class="hero__subtitle">Занялся собой? Займись котом!</h2>
+      </div>
+      <div class="hero__decor-wrapper">
+        <a class="button button--program" href="form.html">Подобрать программу</a>
+      </div>
     </section>
     <section class="diet diet--slim">
       <h2 class="diet__title">Похудение</h2>
