--- a/source/index.html
+++ b/source/index.html
@@ -107,19 +107,23 @@
         <a class="button button--program" href="form.html">Подобрать программу</a>
       </div>
     </section>
-    <section class="diet diet--slim">
-      <h2 class="diet__title">Похудение</h2>
-      <p class="diet__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету!
-        Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-      </p>
-      <a class="diet__link" href="catalog.html#slim">Каталог Slim</a>
-    </section>
-    <section class="diet diet--pro">
-      <h2 class="diet__title">Набор массы</h2>
-      <p class="diet__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему
-        коту нарастить необходимые мышцы!
-      </p>
-      <a class="diet__link" href="catalog.html#pro">Каталог Pro</a>
+    <section class="nutrition-program">
+      <article class="diet-card diet-card--slim">
+        <h2 class="diet-card__title">Похудение</h2>
+        <p class="diet-card__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
+          диету!
+          Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+        </p>
+        <a class="diet-card__link" href="catalog.html#slim">Каталог Slim</a>
+      </article>
+      <article class="diet-card diet-card--pro">
+        <h2 class="diet-card__title">Набор массы</h2>
+        <p class="diet-card__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
+          вашему
+          коту нарастить необходимые мышцы!
+        </p>
+        <a class="diet-card__link" href="catalog.html#pro">Каталог Pro</a>
+      </article>
     </section>
     <section class="advantages">
       <h2 class="advantages__title">Как это работает</h2>
