Adds promotion stylization

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -101,7 +101,7 @@
     <section class="catalog">
       <h1 class="catalog__title">Каталог продукции</h1>
       <article class="product-card">
-        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
+        <img class="product-card__image" src="img/pro500chicken.png" width="68" height="86" alt="Изображение продукта Cat Energy Pro 500г.">
         <h2 class="product-card__title">Cat Energy Pro 500г</h2>
         <table class="product-card__description">
           <tr>
@@ -117,10 +117,10 @@
             <td>700 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card">
-        <img class="product-card__image" id="pro" src="" width="" height=""
+        <img class="product-card__image" id="pro" src="img/pro1000chicken.png" width="84" height="100"
           alt="Изображение продукта Cat Energy Pro 1000г.">
         <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
         <table class="product-card__description">
@@ -137,10 +137,10 @@
             <td>1000 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card">
-        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 500г.">
+        <img class="product-card__image" src="img/pro500fish.png" width="68" height="78" alt="Изображение продукта Cat Energy Pro 500г.">
         <h2 class="product-card__title">Cat Energy Pro 500г</h2>
         <table class="product-card__description">
           <tr>
@@ -156,10 +156,10 @@
             <td>700 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card">
-        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Pro 1000г.">
+        <img class="product-card__image" src="img/pro1000fish.png" width="84" height="100" alt="Изображение продукта Cat Energy Pro 1000г.">
         <h2 class="product-card__title">Cat Energy Pro 1000г</h2>
         <table class="product-card__description">
           <tr>
@@ -175,10 +175,10 @@
             <td>1000 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card">
-        <img class="product-card__image" id="slim" src="" width="" height=""
+        <img class="product-card__image" id="slim" src="img/slim500buckwheat.png" width="68" height="78"
           alt="Изображение продукта Cat Energy Slim 500г.">
         <h2 class="product-card__title">Cat Energy Slim 500г</h2>
         <table class="product-card__description">
@@ -195,10 +195,10 @@
             <td>400 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card">
-        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 1000г.">
+        <img class="product-card__image" src="img/slim1000buckwheat.png" width="84" height="100" alt="Изображение продукта Cat Energy Slim 1000г.">
         <h2 class="product-card__title">Cat Energy Slim 1000г</h2>
         <table class="product-card__description">
           <tr>
@@ -214,10 +214,10 @@
             <td>700 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card">
-        <img class="product-card__image" src="" width="" height="" alt="Изображение продукта Cat Energy Slim 500г.">
+        <img class="product-card__image" src="img/slim500rice.png" width="72" height="84" alt="Изображение продукта Cat Energy Slim 500г.">
         <h2 class="product-card__title">Cat Energy Slim 500г</h2>
         <table class="product-card__description">
           <tr>
@@ -233,12 +233,12 @@
             <td>500 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card__button button" href="#">Заказать</a>
       </article>
       <article class="product-card product-card--show-more">
         <h2 class="product-card__title">Показать еще 100500 товаров</h2>
         <p class="product-card__subtitle">На самом деле вкусов гораздо больше!</p>
-        <a class="button button--secondary">Показать все</a>
+        <a class="product-card__button button button--secondary">Показать все</a>
       </article>
     </section>
     <section class="catalog-additional">
@@ -288,7 +288,7 @@
       <!-- <img src="" width="" height="" alt="Портфель-переноска для котов"> -->
       <p class="promotion__description">Закажите все и получите чехол для кота в подарок!</p>
     </section>
-    <section class="invite-dealers">
+    <section class="invite-dealers invite-dealers--secondary">
       <div class="invite-dealers__wrapper">
         <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
         <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
