--- a/source/form.html
+++ b/source/form.html
@@ -146,7 +146,7 @@
         <p class="form__footnote">* - Обязательные поля</p>
       </form>
     </section>
-    <section class="invite-dealers">
+    <section class="invite-dealers invite-dealers--secondary">
       <div class="invite-dealers__wrapper">
         <h3 class="invite-dealers__title">Приглашаем к сотрудничеству дилеров!</h3>
         <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
