Adds header, hero, nutrition adaptive grid in index

--- a/source/index.html
+++ b/source/index.html
@@ -99,12 +99,11 @@
   <main class="main-container">
     <section class="hero">
       <div class="hero__content-wrapper">
-        <h1 class="hero__title">Функциональное питание для котов</h1>
+        <h1 class="hero__title">Функциональное питание&nbsp;для&nbsp;котов</h1>
         <h2 class="hero__subtitle">Занялся собой? Займись котом!</h2>
       </div>
-      <div class="hero__decor-wrapper">
-        <a class="button button--program" href="form.html">Подобрать программу</a>
-      </div>
+      <div class="hero__decor-wrapper"></div>
+      <a class="button button--program" href="form.html">Подобрать программу</a>
     </section>
     <section class="nutrition-program">
       <article class="diet-card diet-card--slim">
