--- a/source/index.html
+++ b/source/index.html
@@ -148,22 +148,26 @@
       </p>
       <div class="example__list-wrapper">
         <dl class="example__list">
-          <dt class="example__weight">Снижение веса</dt>
+          <dt class="example__weight">снижение веса</dt>
           <dd class="example__description">5 кг</dd>
         </dl>
         <dl class="example__list">
-          <dt class="example__time">Затрачено времени</dt>
+          <dt class="example__time">затрачено времени</dt>
           <dd class="example__description">60 дней</dd>
         </dl>
+        <p class="example__expenses">
+          <span>Затраты на питание:</span>
+          <span>15 000 руб.</span>
+        </p>
       </div>
-      <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
       <div class="example__slider">
         <img class="example__image-before" src="img/fat-cat.png" width="280" height="256" alt="Толстый кот.">
         <img class="example__image-after" src="img/slim-cat.png" width="280" height="256" alt="Стройный кот.">
         <button class="button" aria-label="Подвиньте вправо или влево.">
-          <svg></svg>
+          <!-- <svg></svg> -->
         </button>
       </div>
+      <div class="example__decor"></div>
     </section>
     <section class="invite-dealers">
       <div class="invite-dealers__wrapper">
