--- a/source/index.html
+++ b/source/index.html
@@ -184,9 +184,7 @@
         <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="invite-dealers__map-wrapper">
-        <!-- <div class="invite-dealers__map"></div> -->
-        <!-- <img class="invite-dealers__map" src="img/map.jpg" width="320" height="362" alt="Карта местоположения офиса.">
-        <img class="invite-dealers__map-pin" src="img/map-pin.png" width="57" height="53" alt="Наш офис здесь."> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1682891325613!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
@@ -262,6 +260,7 @@
       </div>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
