--- a/source/index.html
+++ b/source/index.html
@@ -112,39 +112,45 @@
       </div>
     </section>
     <section class="nutrition-program">
-      <article class="diet-card diet-card--slim">
-        <h2 class="diet-card__title">Похудение</h2>
-        <p class="diet-card__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
-          диету!
-          Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-        </p>
-        <a class="diet-card__link" href="catalog.html#slim">Каталог Slim</a>
-      </article>
-      <article class="diet-card diet-card--pro">
-        <h2 class="diet-card__title">Набор массы</h2>
-        <p class="diet-card__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
-          вашему
-          коту нарастить необходимые мышцы!
-        </p>
-        <a class="diet-card__link" href="catalog.html#pro">Каталог Pro</a>
-      </article>
+      <div class="nutrition-program__container">
+        <article class="diet-card diet-card--slim">
+          <h2 class="diet-card__title">Похудение</h2>
+          <p class="diet-card__intro">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
+            на
+            диету!
+            Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="diet-card__link" href="catalog.html#slim">Каталог Slim</a>
+        </article>
+        <article class="diet-card diet-card--pro">
+          <h2 class="diet-card__title">Набор массы</h2>
+          <p class="diet-card__intro">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет
+            вашему
+            коту нарастить необходимые мышцы!
+          </p>
+          <a class="diet-card__link" href="catalog.html#pro">Каталог Pro</a>
+        </article>
+      </div>
     </section>
     <section class="advantages">
-      <h2 class="advantages__title">Как это работает</h2>
-      <ul class="advantages__list">
-        <li class="advantages__item advantages__item--benefit">Функциональное питание cодержит только полезные
-          питательные вещества.
-        </li>
-        <li class="advantages__item advantages__item--release-form">Выпускается в виде порошка, который нужно лишь
-          залить кипятком и готово.
-        </li>
-        <li class="advantages__item advantages__item--replace-food">Замените один-два приема обычной еды на наше
-          функциональное питание.
-        </li>
-        <li class="advantages__item advantages__item--fast-result">Уже через месяц наслаждайтесь изменениями к лучшему
-          вашего питомца!
-        </li>
-      </ul>
+      <div class="advantages__container">
+        <h2 class="advantages__title">Как это работает</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--benefit">Функциональное питание cодержит только полезные
+            питательные вещества.
+          </li>
+          <li class="advantages__item advantages__item--release-form">Выпускается в виде порошка, который нужно лишь
+            залить кипятком и готово.
+          </li>
+          <li class="advantages__item advantages__item--replace-food">Замените один-два приема обычной еды на наше
+            функциональное питание.
+          </li>
+          <li class="advantages__item advantages__item--fast-result">Уже через месяц наслаждайтесь изменениями к лучшему
+            вашего питомца!
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="example">
       <div class="example__container">
@@ -184,7 +190,9 @@
         <p class="invite-dealers__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="invite-dealers__map-wrapper">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1682891325613!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1682891325613!5m2!1sru!2sru"
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
@@ -236,11 +244,11 @@
           </svg>
         </a>
         <a class=" social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм.">
-          <svg aria-hidden="true" focusable="false" width="21" height="18" viewBox="0 0 21 18" fill="currentColor"
+              <svg aria-hidden="true" focusable="false" width="21" height="18" viewBox="0 0 21 18" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
+                <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M19.9608 0.152905C20.1393 0.302216 20.2255 0.534898 20.1872 0.764481L17.5611 16.5214C17.5244 16.7411 17.3789 16.9273 17.1745 17.0159C16.97 17.1045 16.7346 17.0833 16.5493 16.9597L8.67082 11.7074C8.51771 11.6054 8.41447 11.4437 8.38624 11.2619C8.358 11.08 8.40738 10.8947 8.52233 10.751L11.133 7.48773L6.77303 10.3944C6.577 10.525 6.32597 10.5407 6.11524 10.4353L0.862931 7.80915C0.627693 7.69153 0.485347 7.44488 0.5012 7.18235C0.517052 6.91983 0.688044 6.6921 0.935726 6.60364L19.3188 0.0382579C19.538 -0.0400244 19.7822 0.00359465 19.9608 0.152905ZM2.82626 7.32275L6.36168 9.09046L13.9231 4.0495C14.1925 3.86994 14.5525 3.91349 14.7712 4.1521C14.99 4.3907 15.0022 4.75314 14.8 5.00591L9.99502 11.0121L16.4328 15.3039L18.7083 1.65058L2.82626 7.32275Z" />
-          </svg>
+              </svg>
         </a>
       </div>
       <div class="footer__academy-logo-wrapper">
