Adds catalog stylization

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -93,9 +93,9 @@
         <button class="main-nav__toggle" aria-label="Открыть меню.">
         </button>
         <div class="main-nav__wrapper">
-          <a class="main-nav__link" href="index.html">Главная</a>
-          <a class="main-nav__link main-nav__link--current">Каталог продукции</a>
-          <a class="main-nav__link" href="form.html">Подбор программы</a>
+          <a class="main-nav__link main-nav__link--secondary" href="index.html">Главная</a>
+          <a class="main-nav__link main-nav__link--secondary main-nav__link--current">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--secondary" href="form.html">Подбор программы</a>
         </div>
       </nav>
     </div>
@@ -251,50 +251,50 @@
     </section>
     <section class="catalog-additional">
       <h1 class="catalog-additional__title">Дополнительные товары</h1>
-      <article class="product-card product-card--additional">
-        <h2 class="product-card__title">Сахарозаменитель</h2>
-        <table class="product-card__description">
+      <article class="product-card-additional">
+        <h2 class="product-card-additional__title">Сахарозаменитель</h2>
+        <table class="product-card-additional__description">
           <tr>
             <th>1 упаковка(100 г)</th>
             <td>200 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card-additional__button button" href="#">Заказать</a>
       </article>
-      <article class="product-card product-card--additional">
-        <h2 class="product-card__title">Питьевая вода</h2>
-        <table class="product-card__description">
+      <article class="product-card-additional">
+        <h2 class="product-card-additional__title">Питьевая вода</h2>
+        <table class="product-card-additional__description">
           <tr>
             <th>5 литров</th>
             <td>50 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card-additional__button button" href="#">Заказать</a>
       </article>
-      <article class="product-card product-card--additional">
-        <h2 class="product-card__title">Молоко</h2>
-        <table class="product-card__description">
+      <article class="product-card-additional">
+        <h2 class="product-card-additional__title">Молоко</h2>
+        <table class="product-card-additional__description">
           <tr>
             <th>1 литр</th>
             <td>100 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card-additional__button button" href="#">Заказать</a>
       </article>
-      <article class="product-card product-card--additional">
-        <h2 class="product-card__title">Витамины</h2>
-        <table class="product-card__description">
+      <article class="product-card-additional">
+        <h2 class="product-card-additional__title">Витамины</h2>
+        <table class="product-card-additional__description">
           <tr>
             <th>1 упаковка(30 г)</th>
             <td>300 ₽</td>
           </tr>
         </table>
-        <a class="button" href="#">Заказать</a>
+        <a class="product-card-additional__button button" href="#">Заказать</a>
       </article>
-    </section>
-    <section class="promotion" aria-label="Акция">
-      <!-- <img src="" width="" height="" alt="Портфель-переноска для котов"> -->
-      <p class="promotion__description">Закажите все и получите чехол для кота в подарок!</p>
+      <article class="promotion" aria-label="Акция">
+        <!-- <img src="" width="" height="" alt="Портфель-переноска для котов"> -->
+        <p class="promotion__description">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
+      </article>
     </section>
     <section class="invite-dealers invite-dealers--secondary">
       <div class="invite-dealers__wrapper">
