--- a/source/form.html
+++ b/source/form.html
@@ -93,9 +93,9 @@
         <button class="main-nav__toggle" aria-label="Открыть меню.">
         </button>
         <div class="main-nav__wrapper">
-          <a class="main-nav__link" href="index.html">Главная</a>
-          <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
-          <a class="main-nav__link main-nav__link--current">Подбор программы</a>
+          <a class="main-nav__link main-nav__link--secondary" href="index.html">Главная</a>
+          <a class="main-nav__link main-nav__link--secondary" href="catalog.html">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--secondary main-nav__link--current">Подбор программы</a>
         </div>
       </nav>
     </div>
